# actuarial_tooling_python

./: glm-jax.ipynb  pyproject.toml
actuarial_python_tooling/: plots.py
actuarial_python_tooling/models/: poisson.py
